BattleSeaPlayPageController